fix: small bugs and improvements
* images must now be at least 250x250 pixels
* can't go to next page if there is something that is not finished on the current page (for example, no image selected, or image not big enough)
* min sizes in cropping were wrong because image is a bit squashed

--- a/src/app/(dashboard)/admin/badge/style.module.scss
+++ b/src/app/(dashboard)/admin/badge/style.module.scss
@@ -1,78 +1,94 @@
-.badgePage {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  flex-direction: column;
+.page {
+  padding: 5vh 0;
 
-  .fileUpload {
-    width: 70%;
-    margin: auto;
-  }
-  .arrows {
-    width: 100px;
-    margin: auto;
+  .content {
     display: flex;
-    justify-content: space-between;
-
-    svg {
-      cursor: pointer;
-
-      &.disabled {
-        cursor: initial;
-        opacity: 0.5;
-      }
-    }
-  }
-  .cropImageSlideContainer {
-    display: flex;
-    flex-direction: row;
-    width: 95%;
-    justify-content: space-evenly;
     align-items: center;
+    width: 100%;
+    flex-direction: column;
 
-    .error {
-      text-align: center;
-      color: rgba(255, 102, 0, 0.726);
-    }
-    .result {
-      position: relative;
-      margin: 1em;
-
-      .background {
-        height: 50vh;
-        border-radius: 30px;
-        -webkit-box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.091);
-        box-shadow: 5px 5px 11px 0px rgba(0,0,0,0.27);
+    // Slide 1
+    & {
+      .fileUpload {
+        width: 70%;
+        margin: auto;
       }
-      .imageWrapper {
-        overflow: hidden;
-        position: absolute;
-        top: 7vh;
-        left: 7vh;
-        width: 20vh;
-        aspect-ratio: 1;
-        border-radius: 100%;
-        border: white solid;
 
-        .image {
+      .warning {
+        &.hidden {
+          display: none;
+        }
+      }
+    }
+
+    // Slide 2
+    & {
+      .cropImageContainer {
+        border: 5px solid #002d40;
+        padding: 20px;
+        width: 20%;
+        -webkit-border-radius: 18px;
+        -moz-border-radius: 18px;
+        border-radius: 18px;
+      }
+
+      .cropImageSlideContainer {
+        display: flex;
+        flex-direction: row;
+        width: 95%;
+        justify-content: space-evenly;
+        align-items: center;
+
+        .result {
           position: relative;
-          aspect-ratio: 1;
-          width: 100%;
-        }
-        .fakeImage {
-          width: 100%;
-          height: 100%;
-          background-color: rgba(216, 237, 255, 0.516);
+          margin: 1em;
+
+          .background {
+            height: 50vh;
+            border-radius: 30px;
+            -webkit-box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.091);
+            box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.27);
+          }
+
+          .imageWrapper {
+            overflow: hidden;
+            position: absolute;
+            top: 7vh;
+            left: 7vh;
+            width: 20vh;
+            aspect-ratio: 1;
+            border-radius: 100%;
+            border: white solid;
+
+            .image {
+              position: relative;
+              aspect-ratio: 1;
+              width: 100%;
+            }
+          }
         }
       }
     }
-    .cropImageContainer {
-      border: 5px solid #002D40;
-      padding: 20px;
-      width: 20%;
-      -webkit-border-radius: 18px;
-      -moz-border-radius: 18px;
-      border-radius: 18px;
+
+    .arrows {
+      width: 100px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+
+      svg {
+        cursor: pointer;
+
+        &.invisible {
+          visibility: hidden;
+        }
+
+        &.disabled {
+          cursor: initial;
+          pointer-events: none;
+          opacity: 0.5;
+        }
+      }
     }
   }
 }
